# stream-score-stack

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
dags/: imitation_ingest_data.py
src/: app.py  config.py
src/db/: init_db.py
